[gd_scene load_steps=2 format=3 uid="uid://dswfestiuvokn"]

[ext_resource type="Script" uid="uid://rcuas12jqqyx" path="res://Scripts/trade.gd" id="1_7plnu"]

[node name="Trade" type="VBoxContainer"]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
offset_right = 40.0
offset_bottom = 40.0
alignment = 1
script = ExtResource("1_7plnu")

[node name="TradeDescriptor" type="Label" parent="."]
layout_mode = 2
text = "Trade?"
horizontal_alignment = 1

[node name="ReplyButtons" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="YesButton" type="Button" parent="ReplyButtons"]
layout_mode = 2
text = "Yes"

[node name="NoButton" type="Button" parent="ReplyButtons"]
layout_mode = 2
text = " No"

[connection signal="pressed" from="ReplyButtons/YesButton" to="." method="_on_yes_button_pressed"]
[connection signal="pressed" from="ReplyButtons/NoButton" to="." method="_on_no_button_pressed"]
